# Cursovay_OOP

./: README.md  main.py  pyproject.toml
src/: hh.py  saver.py  utils.py  vacancy.py
tests/: test_hh.py  test_saver.py  test_utils.py  test_vacancy.py
