[tool.poetry]
name = "cursovay-oop"
version = "0.1.0"
description = ""
authors = ["ttt.temaa <artem1005200776@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
pep8 = "^1.7.1"
mypy = "^1.13.0"
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119